JumpScript/tests/baselines/reference/objectTypeWithOptionalProperty1.js
//// [objectTypeWithOptionalProperty1.jump]
    var b = {
        x?: 1 // error
    }

//// [objectTypeWithOptionalProperty1.js]
var b = {
    x: 1 // error
};
